[package]
name = "template-quote"
version = "0.4.1"
edition = "2021"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
description = "A new-fasioned quote! macro implementation with pretty template-engine like syntax"
license = "MIT"
keywords = ["syn", "quote", "proc-macro", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/yasuo-ozu/template_quote"


[dependencies]
template-quote-impl = { path = "./template_quote_impl", version = "0.4.1" }
quote = "1.0"

[dev-dependencies]
proc-macro2 = "1.0.47"

[workspace]
members = [
	".",
	"template_quote_impl"
]
resolver = "2"
