[package]
name = "template-quote"
version = "0.4.4"
edition = "2021"
rust-version = "1.56"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
description = "A new-fasioned quote! macro implementation with pretty template-engine like syntax"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yasuo-ozu/template_quote"
documentation = "https://docs.rs/template-quote"
keywords = ["quote", "proc-macro", "macros", "template", "codegen"]
categories = ["development-tools::procedural-macro-helpers", "template-engine"]
repository = "https://github.com/yasuo-ozu/template_quote"


[dependencies]
template-quote-impl = { path = "./template_quote_impl", version = "0.4.4" }
quote = "1.0.35"

[dev-dependencies]
proc-macro2 = "1.0.79"

[workspace]
members = [".", "template_quote_impl"]
resolver = "2"
